--- a/screen.css
+++ b/screen.css
@@ -46,13 +46,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
-  font-family: sans-serif;
-  color: #2a2a2a; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #5e0808; }
 
 a {
-  color: #0388a6; }
+  color: #740f8d; }
   a:hover {
     color: #009ce0; }
 
 #main {
   padding: 50px; }
+
+  p {
+    font-size: 40px;
+  }
